--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_dotenv: ^6.0.0
   flutter_map: ^8.2.2
   geolocator: ^14.0.2
   latlong2: ^0.9.1
@@ -25,3 +26,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - .env
