--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   flutter_dotenv: ^6.0.0
   flutter_map: ^8.2.2
+  flutter_popup_card: ^0.0.6
   geolocator: ^14.0.2
   latlong2: ^0.9.1
 
