--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,9 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  bloc: ^9.1.0
   equatable: ^2.0.7
+  file_picker: ^10.3.3
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
@@ -15,7 +17,10 @@ dependencies:
   flutter_map: ^8.2.2
   flutter_popup_card: ^0.0.6
   geolocator: ^14.0.2
+  http: ^1.5.0
   latlong2: ^0.9.1
+  permission_handler: ^12.0.1
+  platform_file: ^0.1.0
 
 
 dev_dependencies:
